# xbledctl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
.github/workflows/: release.yml
docs/: RESEARCH.md
installer/: xbledctl-setup.iss
res/: app.manifest  app.rc
src/: gui_theme.h  main.cpp  xbox_led.c  xbox_led.h
